[package]
name = "ink_types_node_runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"

repository = "https://github.com/paritytech/ink"
documentation = "https://github.com/paritytech/ink/wiki"
homepage = "https://www.parity.io/"

description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]

include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
ink_core = { git = "https://github.com/paritytech/ink/", branch = "aj-dispatch-call", package = "ink_core", default-features = false }
parity-codec = { version = "4.1", default-features = false, features = ["derive"] }

[dev-dependencies]
node-runtime = { git = "https://github.com/paritytech/substrate/", package = "node-runtime", default-features = false }
srml-system = { git = "https://github.com/paritytech/substrate/", package = "srml-system", default-features = false }
srml-timestamp = { git = "https://github.com/paritytech/substrate/", package = "srml-timestamp", default-features = false }
srml-contract = { git = "https://github.com/paritytech/substrate/", package = "srml-contracts", default-features = false }
srml-indices = { git = "https://github.com/paritytech/substrate/", package = "srml-indices", features = ["std"] }
quickcheck = "0.8"
quickcheck_macros = "0.8"

[features]
default = ["std"]
std = [
    "ink_core/std",
    "node-runtime/std",
    "srml-indices/std",
    "srml-system/std",
    "srml-timestamp/std",
    "srml-contract/core",
]
