[package]
name = "ink_types_node_runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"

repository = "https://github.com/paritytech/ink"
documentation = "https://github.com/paritytech/ink/wiki"
homepage = "https://www.parity.io/"

description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]

include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
ink_core = { git = "https://github.com/paritytech/ink/", package = "ink_core", default-features = false }

scale = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
type-metadata = { git = "https://github.com/type-metadata/type-metadata.git", default-features = false, features = ["derive"], optional = true }

[patch.'https://github.com/paritytech/ink/']
ink_core = { git = "https://github.com/liuchengxu/ink/", branch = "migrate-ink-types-node-runtime-to-ink2.0", package = "ink_core", default-features = false }

[dev-dependencies]
node-runtime = { git = "https://github.com/paritytech/substrate/", package = "node-runtime", features = ["std"] }
frame-system = { git = "https://github.com/paritytech/substrate/", package = "frame-system", features = ["std"] }
pallet-timestamp = { git = "https://github.com/paritytech/substrate/", package = "pallet-timestamp", features = ["std"] }
pallet-contract = { git = "https://github.com/paritytech/substrate/", package = "pallet-contracts", features = ["std"] }
pallet-indices = { git = "https://github.com/paritytech/substrate/", package = "pallet-indices", features = ["std"] }
quickcheck = "0.8"
quickcheck_macros = "0.8"

[features]
default = ["std"]
std = [
    "ink_core/test-env",
]
ink-generate-abi = [
    "std",
    "type-metadata",
    "ink_core/ink-generate-abi",
]
