[package]
name = "ink_types_node_runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"

repository = "https://github.com/paritytech/ink"
documentation = "https://github.com/paritytech/ink/wiki"
homepage = "https://www.parity.io/"

description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]

include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
ink_core = { git = "https://github.com/paritytech/ink/", package = "ink_core", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate/", package = "frame-system", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/substrate/", package = "pallet-indices", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate/", package = "sp-core", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate/", package = "sp-io", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime = { git = "https://github.com/paritytech/substrate/", package = "sp-runtime", default-features = false }
scale = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
type-metadata = { git = "https://github.com/type-metadata/type-metadata.git", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
std = [
    "ink_core/std",
    "frame-system/std",
    "pallet-indices/std",
    "sp-core/std",
]
ink-generate-abi = [
    "std",
    "type-metadata",
    "ink_core/ink-generate-abi",
]
