[package]
name = "calls"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ink_core = { git = "https://github.com/paritytech/ink", package = "ink_core", default-features = false }
ink_lang2 = { git = "https://github.com/paritytech/ink", package = "ink_lang2", default-features = false }
ink_types_node_runtime = { path = "../../", default-features = false }
parity-scale-codec = { version = "1.1", default-features = false, features = ["derive"] }

[patch.'https://github.com/paritytech/ink']
ink_core = { path = "../../../../../../../data/src/github.com/liuchengxu/ink/core", package = "ink_core", default-features = false }
ink_lang2 = { path = "../../../../../../../data/src/github.com/liuchengxu/ink/lang2", package = "ink_lang2", default-features = false }

[lib]
name = "calls"
crate-type = ["cdylib"]

[features]
default = ['test-env']
test-env = [
    "std",
    "ink_core/test-env",
    "ink_lang2/test-env",
]
std = [
    "ink_core/std",
    "ink_lang2/std",
    "parity-scale-codec/std",
    "ink_types_node_runtime/std",
]
ink-generate-abi = [
    "ink_lang2/ink-generate-abi"
]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true
